[tool.poetry]
name = "mbc"
version = "0.1.0"
description = ""
authors = ["Jeff Crawford <jcrawford888@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
requests = "^2.20"
html2text = "^2018.1"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
